<resources>
    <string name="app_name">Swadhyaya</string>
    <string name="app_title">स्वाध्याय</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up</string>
    <string name="sign_up_prompt">Already registered? Sign In</string>
    <string name="username">Username</string>
    <string name="institution">Institution</string>
    <string name="class_name">Class</string>
    <string name="usericon">userIcon</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="department">Department</string>
    <string name="assignments">My Assignments</string>
    <string name="log_out">Log Out</string>
    <string name="my_faculty">My Faculty</string>
    <string name="my_profile">My Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_assignments">My Assignments</string>
    <string name="assignment">Assignment</string>
    <string name="faculty">Faculty</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="select_file">Select File</string>
    <string name="selected_file_none">Selected File : None</string>
    <string name="selected_file_prompt">\"Selected File : \"</string>
</resources>