<?xml version="1.0" encoding="utf-8"?><!-- Menu Resource file -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/assignments_image"
            android:title="@string/assignments" />

        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/profile_icon"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_faculty"
            android:icon="@drawable/faculty_logo"
            android:title="@string/my_faculty" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/log_out_logo"
            android:title="@string/log_out" />
    </group>
</menu>