<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tvRegistrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_font"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationTitle"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/usericon"
                app:srcCompat="@mipmap/user_logo_foreground" />

            <EditText
                android:id="@+id/etSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/username"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/institution"
                android:gravity="center_horizontal"
                android:hint="@string/institution"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/institution"
                android:gravity="center_horizontal"
                android:hint="@string/class_name"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/email"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/email"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/confirm_password"
                android:gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btnOpenLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:padding="5dp"
                android:text="@string/sign_up_prompt"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

            <!-- Ghost View added to Fit scrollView Widgets -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>