<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/update_profile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_profile"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:layout_constraintVertical_bias="0.2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/usericon"
                android:src="@mipmap/user_logo_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/username"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/username"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/email"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/institution"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/institution"
                android:hint="@string/institution"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/class_name"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/class_name"
                android:hint="@string/class_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/updateProfileProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:visibility="gone" />

            <!-- Ghost View added to Fit scrollView Widgets -->
            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>