<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".SubmitAssignment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/problem_statement"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvProblemStatement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:autofillHints="@string/problem_statement"
                android:hint="@string/problem_statement"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

            <TextView
                android:id="@+id/tvSelectedFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:autofillHints="@string/problem_statement"
                android:hint="@string/selected_file_none"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />


            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/btnSelectFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:text="@string/select_file"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                app:layout_constraintVertical_bias="1" />

            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/btnSubmitAssignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                app:layout_constraintVertical_bias="1" />

            <ProgressBar
                android:id="@+id/submissionProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <!-- Ghost View added to Fit scrollView Widgets -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>